# SDLtestProject

./: CMakeLists.txt  README.md
hdr/: Button.h  Image.h  MCore.h  STexture.h  Widget.h  WidgetContainer.h  logger.h
main/: CMakeLists.txt  main.cpp  main.h
src/: Button.cpp  CMakeLists.txt  Image.cpp  MCore.cpp  STexture.cpp  Widget.cpp  WidgetContainer.cpp
